
2007-06-12  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Redirect mails to myself, temporarily,
	for testing purposes.

	* bin/fetch-pot, bin/po-register, bin/tp-robot, lib/registry.py:
	Use shutil.py instead of custom functions, delete obsolete code,
	small cleanups.

2007-06-12  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot, lib/run.py: Tweak a few messages.

	* registry/registry.sgml: Synced with Montréal.

2007-06-11  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Differentiate the mails sent to team lists:
	the addition of a new POT file from the submission of an updated
	translation.

2007-06-09  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Move little functions to the top, make separate
	functions for opening output file and for underwriting each mail.

	* bin/po-register, bin/tp-robot: Move more little functions to the
	top, hard-code essential blank lines, adjust some whitespace.

2007-06-08  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Clarify its function, and ungettextize its 
	local error messages.

	* bin/po-register: Tweak the mails that are sent out.

	* bin/po-register: Get rid of the backticks.

2007-06-07  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/AUTHORS, registry/registry.sgml: Synced with Montréal.

	* bin/fetch-pot, bin/make-maintain: Whitespace and comment tweaks.

	* bin/registry-data: Standardize import.

	* bin/po-register: Remove unneeded cluster workaround.

2007-06-07  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register, doc/index.html, doc/files.all, doc/robot.all,
	doc/maintainers.all, doc/leaders.all, doc/translators.all,
	lib/localweb.py, lib/run.py, tools/sendpo.sh:
	Differentiate the coordinator's and robot's email addresses from
	the general translation address, remove unneeded "mailto:".

2007-06-06  Benno Schulenberg  <benno@vertaalt.nl>

	* README: Updates.

2007-06-05  Benno Schulenberg  <benno@vertaalt.nl>
